# plantgl

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.txt  CMakeLists.txt  ChangeLog.txt  PKG-INFO  README.md  README.rst  README.txt  SConstruct  appveyor.yml  build.sh  compile-osx.sh  construct.yaml  generate_bisonflex.py  githubaction.yml  hexversion.py  install.sh  metainfo.ini  option_conda_win.py  options.py  options_brew.py  options_brew_mavericks.py  options_conda.py  options_conda_build.py  options_conda_win.py  options_cygwin.py  options_linux.py  options_macosx.py  options_macport.py  options_mingw.py  options_windows.py  plantgl-devel-win.yaml  plantgl-devel.yaml  pyproject.toml  setup-egg.py  setup.cfg  (+4 more)
src/cpp/plantgl/algo/: CMakeLists.txt  SConscript  algo.vcproj  algo.vcxproj  algo.vcxproj.filters  algo_config.h
src/cpp/plantgl/algo/base/: amaptranslator.cpp  amaptranslator.h  bboxcomputer.cpp  bboxcomputer.h  bspherecomputer.cpp  bspherecomputer.h  cgalwrap.h  conepercept.h  curvemanipulation.cpp  curvemanipulation.h  dijkstra.h  discretizer.cpp  discretizer.h  intersection.cpp  intersection.h  matrixcomputer.cpp  matrixcomputer.h  merge.cpp  merge.h  overlay.cpp  overlay.h  planeclipping.cpp  planeclipping.h  pointmanipulation.cpp  pointmanipulation.h  pointmanipulation2.cpp  polygoncomputer.cpp  polygoncomputer.h  randompoints.cpp  randompoints.h  skelcomputer.cpp  skelcomputer.h  spacecolonization.h  statisticcomputer.cpp  statisticcomputer.h  surfcomputer.cpp  surfcomputer.h  tesselator.cpp  tesselator.h  tritri_isecline.cpp  (+4 more)
src/cpp/plantgl/algo/codec/: SConscript  binaryprinter.cpp  binaryprinter.h  cdc_asc.cpp  cdc_asc.h  cdc_geom.cpp  cdc_geom.h  cdc_ply.cpp  cdc_ply.h  cdc_pov.cpp  cdc_pov.h  cdc_vgstar.cpp  cdc_vgstar.h  cdc_vrml.cpp  cdc_vrml.h  codec_config.h  codecs.cpp  codecs.h  dtafile.cpp  dtafile.h  geomview_file.cpp  geomview_file.h  ligfile.cpp  ligfile.h  linetreeprinter.cpp  linetreeprinter.h  plyprinter.cpp  plyprinter.h  povprinter.cpp  povprinter.h  printer.cpp  printer.h  pyprinter.cpp  pyprinter.h  scne_binaryparser.cpp  scne_binaryparser.h  scne_parser.h  scne_parser.y  scne_scanner.h  scne_scanner.l  (+10 more)
src/cpp/plantgl/algo/fitting/: SConscript  branchcompressor.cpp  branchcompressor.h  eigenvector.cpp  eigenvector.h  fit.cpp  fit.h  miniball.cpp  miniball.h  planargraph.h  planargraph.inl  propervector.cpp  propervector.h  skeleton.cpp  skeleton.h  triangulation3D.cpp  triangulation3D.h
src/cpp/plantgl/algo/grid/: SConscript  annkdtree_p.h  kdtree.cpp  kdtree.h  mvs.cpp  mvs.h  octree.cpp  octree.h  octreenode.cpp  octreenode.h  regularpointgrid.h  tile.h  (+5 more)
src/cpp/plantgl/gui/: CMakeLists.txt  SConscript  gui.vcproj  gui.vcxproj  gui.vcxproj.filters  gui_config.h  pglqopenglwidget.h
src/cpp/plantgl/math/: CMakeLists.txt  SConscript  linearalgebra.h  math.vcproj  math.vcxproj  math.vcxproj.filters  math_config.h  util_deformation.h  util_math.cpp  util_math.h  util_matrix.cpp  util_matrix.h  util_matrixmath.h  util_polymath.h  util_vector.cpp  util_vector.h
src/cpp/plantgl/scenegraph/: CMakeLists.txt  SConscript  pgl_version.cpp  pgl_version.h  scenegraph.vcproj  scenegraph.vcxproj  scenegraph.vcxproj.filters  sg_config.h
src/cpp/plantgl/tool/: CMakeLists.txt  SConscript  bfstream.cpp  bfstream.h  classinfo.h  dirnames.cpp  dirnames.h  errormsg.cpp  errormsg.h  gparser.h  gscanner.h  gscanner_imp.h  gsmbtable.h  rcobject.h  readline.cpp  readline.h  sequencer.cpp  sequencer.h  std.h  timer.cpp  timer.h  tool.vcproj  tool.vcxproj  tool.vcxproj.filters  tools_config.h  tools_version.cpp  tools_version.h  util_array.h  util_array2.cpp  util_array2.h  util_arrayn.h  util_assert.h  util_cache.h  util_enviro.cpp  util_enviro.h  util_hash.h  util_hashmap.h  util_hashset.h  util_mutex.h  util_progress.cpp  (+5 more)
src/wrapper/algo/: CMakeLists.txt  SConscript  export_action.cpp  export_action.h  export_amaptranslator.cpp  export_bboxcomputer.cpp  export_conepercept.cpp  export_curvemanip.cpp  export_depthsortengine.cpp  export_dijkstra.cpp  export_discretizer.cpp  export_fit.cpp  export_glrenderer.cpp  export_grid.h  export_intersect.cpp  export_kdtree.cpp  export_matrixcomputer.cpp  export_merge.cpp  export_octree.cpp  export_overlay.cpp  export_pglturtle.cpp  export_pglturtledrawer.cpp  export_planeclip.cpp  export_pointgrid.cpp  export_pointmanip.cpp  export_povprinter.cpp  export_printer.cpp  export_printer.h  export_projectioncamera.cpp  export_projectionengine.cpp  export_projectionrenderer.cpp  export_pygrid.cpp  export_pyprinter.cpp  export_randompoints.cpp  export_reader.cpp  export_sequencer.cpp  export_skeleton.cpp  export_spacecolonization.cpp  export_surfcomputer.cpp  export_triangulation3D.cpp  (+13 more)
src/wrapper/gui/: CMakeLists.txt  SConscript  export_pixmap.cpp  export_viewer.cpp  export_viewer.h  pgl_gui_wrapper.cpp  wrap_gui.vcproj  wrap_gui.vcxproj  wrap_gui.vcxproj.filters
src/wrapper/math/: CMakeLists.txt  SConscript  export_math.h  export_matrix.h  export_matrix2.cpp  export_matrix3.cpp  export_matrix4.cpp  export_vector.h  export_vector2.cpp  export_vector3.cpp  export_vector4.cpp  pgl_math_wrapper.cpp  wrap_math.vcproj  wrap_math.vcxproj  wrap_math.vcxproj.filters
src/wrapper/scenegraph/: CMakeLists.txt  SConscript  arrays2_macro.h  arrays_macro.h  export_amapsymbol.cpp  export_appearance.cpp  export_arrays.cpp  export_arrays2.cpp  export_asymmetrichull.cpp  export_axisrotated.cpp  export_beziercurve.cpp  export_bezierpatch.cpp  export_bounding.cpp  export_box.cpp  export_color.cpp  export_cone.cpp  export_cylinder.cpp  export_deepcopier.cpp  export_disc.cpp  export_elevationgrid.cpp  export_eulerrotated.cpp  export_explicitmodel.cpp  export_extrudedhull.cpp  export_extrusion.cpp  export_faceset.cpp  export_factory.cpp  export_frustum.cpp  export_function.cpp  export_geometry.cpp  export_geometryarray.cpp  export_group.cpp  export_hull.cpp  export_ifs.cpp  export_image.cpp  export_index.cpp  export_lineicmodel.cpp  export_material.cpp  export_mesh.cpp  export_mesh.h  export_nurbscurve.cpp  (+36 more)
(+1830 files in other folders)
